--- a/Shogun_stylesheet.css
+++ b/Shogun_stylesheet.css
@@ -1,21 +1,93 @@
 /* The stylesheet for the shogun maitake homepage */
 
-Header {
-  display: block;
+/* Body */
+body {
+  background-color: #100f0d;
+  color: white;
+}
+
+/* Header and header elements */
+
+header {
+  display: block flex;
+  justify-content: space-around;
+}
+
+header i {
+  color: white;
 }
 
 /* Nav Bar Class and Elements */
 .navBar {
-  background-color: #676767;
+  background-color: #100f0d;
+  display: flex;
+  justify-content: center;
 }
 
 .navBar li {
+  list-style-type: none;
   color: white;
   width: auto;
   height: auto;
-  display: inline-block;
+  padding: 20px 30px 20px 30px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .navBar a {
   text-decoration: none;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+.navBar a:hover {
+  color: #fcb900;
+}
+.navBar #current-page {
+  color: #fcb900;
+}
+
+/* Drop Down Buttons */
+.drop-button {
+  color: white;
+  background-color: #100f0d;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: rgba(255, 207, 88, 100) !important;
+  color: #100f0d;
+  text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  background-color: rgba(255, 207, 88, 100);
+}
+
+.dropdown:hover .drop-button {
+  background-color: rgba(255, 207, 88, 100);
+  color: #100f0d;
 }
