--- a/Shogun_stylesheet.css
+++ b/Shogun_stylesheet.css
@@ -4,6 +4,7 @@
 body {
   background-color: #100f0d;
   color: white;
+  /* set default font size to 16pt */
 }
 
 /* Header and header elements */
@@ -17,6 +18,21 @@ header i {
   color: white;
 }
 
+/* Page Structure */
+section #logoBar {
+  display: block;
+  background-color: white;
+  width: max-content;
+  height: auto;
+}
+
+#logoBar li {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+
+/* Interactive Elements */
 /* Nav Bar Class and Elements */
 .navBar {
   background-color: #100f0d;
@@ -90,4 +106,21 @@ header i {
 .dropdown:hover .drop-button {
   background-color: rgba(255, 207, 88, 100);
   color: #100f0d;
+}
+
+/* Generic button */
+.button {
+}
+
+/* Animated Jumping Button */
+.jumping-button {
+}
+
+.learn-more-button {
+  display: flex;
+  justify-content: center;
+  color: rgba(255, 207, 88, 100);
+  background-color: #100f0d;
+  border-color: rgba(255, 207, 88, 100);
+  padding: 5px;
 }
