--- a/Shogun_stylesheet.css
+++ b/Shogun_stylesheet.css
@@ -1,12 +1,28 @@
 /* The stylesheet for the shogun maitake homepage */
 /* Font Elements */
+@font-face {
+  font-family: Montserrat;
+  src: url(/Montserrat-Font/Montserrat-Regular.otf);
+}
+
 section p {
   font-size: 16pt;
   font-family: sans-serif;
 }
+h2 {
+  font-family: l;
+}
 
 h4 {
-  font-family: mont;
+  font-family: Montserrat;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 500;
+  color: rgba(255, 207, 88, 100);
+}
+
+span {
+  font-family: inherit;
 }
 
 /* Body */
